--- a/src/app/exam/exam-form/exam-form.component.html
+++ b/src/app/exam/exam-form/exam-form.component.html
@@ -15,7 +15,7 @@
                     </div>
 
                     <div mat-dialog-actions style="margin-top: 10px;">
-                        <button mat-raised-button color="primary" (click)="Submit()" style="width: 100%;"
+                        <button mat-raised-button color="primary" (click)="submit()" style="width: 100%;"
                             [disabled]="!form.valid">Submit</button>
                     </div>
                 </form>
