--- a/src/app/exam/exam-form/exam-form.component.html
+++ b/src/app/exam/exam-form/exam-form.component.html
@@ -15,8 +15,8 @@
                     </div>
 
                     <div mat-dialog-actions style="margin-top: 10px;">
-                        <button mat-raised-button color="primary" (click)="submit()" style="width: 100%;"
-                            [disabled]="!form.valid">Submit</button>
+                        <button mat-raised-button color="primary" (click)="submit()"
+                            style="width: 100%;">Submit</button>
                     </div>
                 </form>
             </div>     
