--- a/src/app/exam/exam-form/exam-form.component.scss
+++ b/src/app/exam/exam-form/exam-form.component.scss
@@ -31,66 +31,24 @@
                     width: 100%;
                 }
 
-                mat-checkbox {
-                    margin: 0;
-                }
-
-                .remember-forgot-password {
-                    font-size: 13px;
-                    margin-top: 8px;
-
-                    .remember-me {
-                        margin-bottom: 16px;
-                    }
-
-                    .forgot-password {
-                        font-size: 13px;
-                        font-weight: 500;
-                        margin-bottom: 16px;
-                    }
-                }
-
                 .submit-button {
                     width: 220px;
                     margin: 16px auto;
                     display: block;
                 }
             }
-
-            .separator {
-                font-size: 15px;
-                font-weight: 600;
-                margin: 24px auto;
-                position: relative;
-                overflow: hidden;
-                width: 100px;
-                color: rgba(0, 0, 0, 0.54);
-
-                .text {
-                    display: inline-flex;
-                    position: relative;
-                    padding: 0 8px;
-                    z-index: 9999;
-
-                    &:before,
-                    &:after {
-                        content: "";
-                        display: block;
-                        width: 30px;
-                        position: absolute;
-                        top: 10px;
-                        border-top: 1px solid rgba(0, 0, 0, 0.12);
-                    }
-
-                    &:before {
-                        right: 100%;
-                    }
-
-                    &:after {
-                        left: 100%;
-                    }
-                }
-            }
         }
     }
+}
+
+.success {
+    color: green;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.error {
+    color: red;
+    font-weight: bold;
+    font-size: 20px;
 }
